# boone-gifts-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 39fa94fcc43d_create_users_and_invites_tables.py  64c0030384bd_add_collections_and_collection_items_.py  9e7b6e3acf69_add_lists_gifts_and_list_shares_tables.py  ea3df14aee6c_add_connections_table.py
app/: config.py  database.py  dependencies.py  main.py
app/cli/: create_admin.py
app/models/: __init__.py  collection.py  collection_item.py  connection.py  gift.py  gift_list.py  invite.py  list_share.py  user.py
app/routers/: auth.py  collections.py  connections.py  gifts.py  invites.py  list_shares.py  lists.py  users.py
app/schemas/: auth.py  collection.py  connection.py  gift.py  gift_list.py  invite.py  list_share.py  user.py
docs/plans/: 2026-02-08-users-design.md  2026-02-08-users-implementation.md  2026-02-14-gift-lists-design.md  2026-02-14-gift-lists-implementation.md
tests/: conftest.py
tests/models/: test_collection.py  test_connection.py  test_gift.py  test_gift_list.py  test_invite.py  test_list_share.py  test_user.py
tests/routers/: test_auth.py  test_collections.py  test_connections.py  test_gifts.py  test_invites.py  test_list_shares.py  test_lists.py  test_users.py
